--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>AquaTrack - Water Conservation Management</title>
     <meta name="description" content="Monitor and conserve water for your community. Track daily usage, receive conservation tips, and help preserve our precious water resources.">
     <link rel="stylesheet" href="./style.css"/>
+    <link rel="icon" href="favicon.png" type="image/png" />
 </head>
 <body>
     <header class="header">
